--- a/app/src/main/res/layout/activity_receitas.xml
+++ b/app/src/main/res/layout/activity_receitas.xml
@@ -19,7 +19,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <EditText
-            android:id="@+id/editValor"
+            android:id="@+id/editValor1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -46,6 +46,7 @@
         app:layout_constraintVertical_chainStyle="packed">
 
         <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/editData1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Ex: 12/03/2001" />
@@ -63,6 +64,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textInputLayout2">
 
         <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/editCategoria1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="ex: salário" />
@@ -80,6 +82,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textInputLayout">
 
         <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/editDescricao1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="ex: salário mensal" />
@@ -94,6 +97,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="@drawable/ic_confirmar_branco" />
+        app:srcCompat="@drawable/ic_confirmar_branco"
+        android:onClick="salvaReceita"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
