Estilizando tela principal|Adicionando menu|Funcionalidade de logout

--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -8,6 +8,8 @@
     android:fitsSystemWindows="true"
     tools:context=".activity.HomeActivity">
 
+    <include layout="@layout/content_home"></include>
+
 
 
     <com.github.clans.fab.FloatingActionMenu
