--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,7 +4,7 @@
     <color name="colorPrimaryDark">#14C38E</color>
     <color name="colorAccent">#B8F1B0</color>
     <color name="black">#FF000000</color>
-    <color name="orange">#FFB84C</color>
+    <color name="red">#E82222</color>
     <color name="grey">#C4CDD5</color>
     <color name="white">#FFFFFFFF</color>
 
